# Server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
filemover-server/: Cargo.toml
filemover-server/src/: main.rs
filemover-server/tests/: a_errors.rs  b_upload_download.rs  c_rate_limit.rs  test_errors.sh  test_rate_limit.sh  test_upload_download.sh
filemover-webui/: index.html
src/: Cargo.toml  cleanup.rs  handlers.rs  lib.rs  main.rs  pages.rs  router.rs  state.rs  words.txt
src/src/: lib.rs  main.rs
src/tests/: a_errors.rs  c_rate_limit.rs
tests/: a_errors.rs  b_upload_download.rs  c_rate_limit.rs  d_load.rs
tests/common/: mod.rs
