[package]
name = "capsule-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = [ "multipart" ] }
axum-governor = "1.0.3"
lazy-limit = "1"
real = { version = "0.1", features = [ "axum" ] }
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [ "sqlite", "runtime-tokio" ] }
tokio = { version = "1.52.3", features = [ "full" ] }
tokio-util = { version = "0.7.18", features = [ "io" ] }
tower-http = { version = "0.6.11", features = [ "cors", "trace" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = [ "multipart" ] }
libc = "0.2"

